letter-spacing fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,7 +34,7 @@ html {
 .main_title {
   font-family: "SF Pro Display Bold";
   font-size: 64px;
-  letter-spacing: -0.08;
+  letter-spacing: -0.08px;
   margin-left: 40px;
   margin-top: 40px;
   margin-bottom: 20px;
